--- a/style_hyperlink.css
+++ b/style_hyperlink.css
@@ -126,3 +126,7 @@ audio {
   width: 100%;
   background: linear-gradient(to right bottom, white, #b5f5ec 100%);
 }
+
+/* body{
+  background: linear-gradient(to right bottom, white, #b5f5ec 100%);
+} */
